--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,4 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <br/>
-<fpn-article [facebookData]="dataFaceBook" *ngIf="dataFaceBook" ></fpn-article>
+<fpn-distribution [dataFaceBook]="dataFaceBook" ></fpn-distribution>
