Added the id of each article

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,4 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <br/>
-<fpn-distribution [dataFaceBook]="dataFaceBook" ></fpn-distribution>
+<fpn-distribution *ngIf="dataFaceBook" [dataFaceBook]="dataFaceBook" ></fpn-distribution>
